parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> multiple_definitions statement_list
Rule 3     statement_list -> statement_list statement
Rule 4     statement_list -> statement
Rule 5     multiple_definitions -> multiple_definitions function_definition
Rule 6     multiple_definitions -> function_definition
Rule 7     multiple_definitions -> multiple_definitions procedure_definition
Rule 8     multiple_definitions -> procedure_definition
Rule 9     multiple_definitions -> multiple_definitions variable_definition
Rule 10    multiple_definitions -> variable_definition
Rule 11    multiple_definitions -> empty
Rule 12    variable_definition -> type IDENT EQ rvalue
Rule 13    variable_definitions -> variable_definitions variable_definition
Rule 14    variable_definitions -> variable_definition
Rule 15    variable_definitions -> empty
Rule 16    opt_formals -> empty
Rule 17    opt_formals -> formals
Rule 18    function_definition -> DEFINE FUNC_IDENT LCURLY opt_formals RCURLY RETURN type variable_definitions IS rvalue END
Rule 19    procedure_definition -> DEFINE PROC_IDENT LSQUARE opt_formals RSQUARE variable_definitions IS statement_list RETURN expression END
Rule 20    procedure_definition -> DEFINE PROC_IDENT LSQUARE opt_formals RSQUARE variable_definitions IS statement_list END
Rule 21    statement -> assignment
Rule 22    assignment -> lvalue ASSIGN rvalue
Rule 23    assignment -> lvalue ASSIGN procedure_call
Rule 24    statement -> print_statement
Rule 25    print_statement -> PRINT print_item
Rule 26    print_statement -> print_statement AMPERSAND print_item
Rule 27    statement -> IF expression THEN statement_list ENDIF
Rule 28    statement -> IF expression THEN statement_list ELSE statement_list ENDIF
Rule 29    statement -> WHILE expression IS statement_list ENDWHILE
Rule 30    statement -> procedure_call
Rule 31    procedure_call -> PROC_IDENT LPAREN RPAREN
Rule 32    procedure_call -> PROC_IDENT LPAREN arguments RPAREN
Rule 33    arguments -> expression
Rule 34    arguments -> arguments COMMA expression
Rule 35    statement -> CLEAR
Rule 36    statement -> PAUSE
Rule 37    statement -> WAIT expression
Rule 38    statement -> DRAW expression
Rule 39    statement -> DRAW expression rgb
Rule 40    rgb -> LPAREN expression COMMA expression COMMA expression RPAREN
Rule 41    expression -> simple_expr
Rule 42    expression -> expression EQ simple_expr
Rule 43    expression -> expression NOTEQ simple_expr
Rule 44    expression -> expression LT simple_expr
Rule 45    simple_expr -> term
Rule 46    simple_expr -> simple_expr PLUS term
Rule 47    simple_expr -> simple_expr MINUS term
Rule 48    simple_expr -> simple_expr ARROW coordinate
Rule 49    term -> factor
Rule 50    term -> term MULT factor
Rule 51    term -> term DIV factor
Rule 52    factor -> atom
Rule 53    factor -> MINUS atom
Rule 54    factor -> PLUS atom
Rule 55    atom -> INT_LITERAL
Rule 56    atom -> IDENT
Rule 57    atom -> IDENT DOT IDENT
Rule 58    atom -> LPAREN expression RPAREN
Rule 59    atom -> function_call
Rule 60    function_call -> FUNC_IDENT LPAREN RPAREN
Rule 61    function_call -> FUNC_IDENT LPAREN arguments RPAREN
Rule 62    type -> IDENT
Rule 63    type -> SHAPE
Rule 64    type -> NUMBER
Rule 65    coordinate_list -> coordinate
Rule 66    coordinate_list -> coordinate_list MINUS coordinate
Rule 67    coordinate -> LSQUARE expression COMMA expression RSQUARE
Rule 68    formals -> formal_arg
Rule 69    formals -> formals SEMICOLON formal_arg
Rule 70    formal_arg -> IDENT COLON type
Rule 71    lvalue -> IDENT
Rule 72    rvalue -> expression
Rule 73    rvalue -> coordinate_list
Rule 74    rvalue -> PLUS coordinate_list
Rule 75    print_item -> expression
Rule 76    print_item -> STRING

Terminals, with rules where they appear

AMPERSAND            : 26
ARROW                : 48
ASSIGN               : 22 23
CLEAR                : 35
COLON                : 70
COMMA                : 34 40 40 67
DEFINE               : 18 19 20
DIV                  : 51
DOT                  : 57
DRAW                 : 38 39
ELSE                 : 28
END                  : 18 19 20
ENDIF                : 27 28
ENDWHILE             : 29
EQ                   : 12 42
FUNC_IDENT           : 18 60 61
IDENT                : 12 56 57 57 62 70 71
IF                   : 27 28
INT_LITERAL          : 55
IS                   : 18 19 20 29
LCURLY               : 18
LPAREN               : 31 32 40 58 60 61
LSQUARE              : 19 20 67
LT                   : 44
MINUS                : 47 53 66
MULT                 : 50
NOTEQ                : 43
NUMBER               : 64
PAUSE                : 36
PLUS                 : 46 54 74
PRINT                : 25
PROC_IDENT           : 19 20 31 32
RCURLY               : 18
RETURN               : 18 19
RPAREN               : 31 32 40 58 60 61
RSQUARE              : 19 20 67
SEMICOLON            : 69
SHAPE                : 63
STRING               : 76
THEN                 : 27 28
WAIT                 : 37
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

arguments            : 32 34 61
assignment           : 21
atom                 : 52 53 54
coordinate           : 48 65 66
coordinate_list      : 66 73 74
empty                : 11 15 16
expression           : 19 27 28 29 33 34 37 38 39 40 40 40 42 43 44 58 67 67 72 75
factor               : 49 50 51
formal_arg           : 68 69
formals              : 17 69
function_call        : 59
function_definition  : 5 6
lvalue               : 22 23
multiple_definitions : 2 5 7 9
opt_formals          : 18 19 20
print_item           : 25 26
print_statement      : 24 26
procedure_call       : 23 30
procedure_definition : 7 8
program              : 0
rgb                  : 39
rvalue               : 12 18 22
simple_expr          : 41 42 43 44 46 47 48
statement            : 3 4
statement_list       : 2 3 19 20 27 28 28 29
term                 : 45 46 47 50 51
type                 : 12 18 70
variable_definition  : 9 10 13 14
variable_definitions : 13 18 19 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . multiple_definitions statement_list
    (5) multiple_definitions -> . multiple_definitions function_definition
    (6) multiple_definitions -> . function_definition
    (7) multiple_definitions -> . multiple_definitions procedure_definition
    (8) multiple_definitions -> . procedure_definition
    (9) multiple_definitions -> . multiple_definitions variable_definition
    (10) multiple_definitions -> . variable_definition
    (11) multiple_definitions -> . empty
    (18) function_definition -> . DEFINE FUNC_IDENT LCURLY opt_formals RCURLY RETURN type variable_definitions IS rvalue END
    (19) procedure_definition -> . DEFINE PROC_IDENT LSQUARE opt_formals RSQUARE variable_definitions IS statement_list RETURN expression END
    (20) procedure_definition -> . DEFINE PROC_IDENT LSQUARE opt_formals RSQUARE variable_definitions IS statement_list END
    (12) variable_definition -> . type IDENT EQ rvalue
    (1) empty -> .
    (62) type -> . IDENT
    (63) type -> . SHAPE
    (64) type -> . NUMBER

  ! shift/reduce conflict for DEFINE resolved as shift
  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for SHAPE resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    DEFINE          shift and go to state 7
    IF              reduce using rule 1 (empty -> .)
    WHILE           reduce using rule 1 (empty -> .)
    CLEAR           reduce using rule 1 (empty -> .)
    PAUSE           reduce using rule 1 (empty -> .)
    WAIT            reduce using rule 1 (empty -> .)
    DRAW            reduce using rule 1 (empty -> .)
    PRINT           reduce using rule 1 (empty -> .)
    PROC_IDENT      reduce using rule 1 (empty -> .)
    IDENT           shift and go to state 9
    SHAPE           shift and go to state 10
    NUMBER          shift and go to state 11

  ! DEFINE          [ reduce using rule 1 (empty -> .) ]
  ! IDENT           [ reduce using rule 1 (empty -> .) ]
  ! SHAPE           [ reduce using rule 1 (empty -> .) ]
  ! NUMBER          [ reduce using rule 1 (empty -> .) ]

    program                        shift and go to state 1
    multiple_definitions           shift and go to state 2
    function_definition            shift and go to state 3
    procedure_definition           shift and go to state 4
    variable_definition            shift and go to state 5
    empty                          shift and go to state 6
    type                           shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (2) program -> multiple_definitions . statement_list
    (5) multiple_definitions -> multiple_definitions . function_definition
    (7) multiple_definitions -> multiple_definitions . procedure_definition
    (9) multiple_definitions -> multiple_definitions . variable_definition
    (3) statement_list -> . statement_list statement
    (4) statement_list -> . statement
    (18) function_definition -> . DEFINE FUNC_IDENT LCURLY opt_formals RCURLY RETURN type variable_definitions IS rvalue END
    (19) procedure_definition -> . DEFINE PROC_IDENT LSQUARE opt_formals RSQUARE variable_definitions IS statement_list RETURN expression END
    (20) procedure_definition -> . DEFINE PROC_IDENT LSQUARE opt_formals RSQUARE variable_definitions IS statement_list END
    (12) variable_definition -> . type IDENT EQ rvalue
    (21) statement -> . assignment
    (24) statement -> . print_statement
    (27) statement -> . IF expression THEN statement_list ENDIF
    (28) statement -> . IF expression THEN statement_list ELSE statement_list ENDIF
    (29) statement -> . WHILE expression IS statement_list ENDWHILE
    (30) statement -> . procedure_call
    (35) statement -> . CLEAR
    (36) statement -> . PAUSE
    (37) statement -> . WAIT expression
    (38) statement -> . DRAW expression
    (39) statement -> . DRAW expression rgb
    (62) type -> . IDENT
    (63) type -> . SHAPE
    (64) type -> . NUMBER
    (22) assignment -> . lvalue ASSIGN rvalue
    (23) assignment -> . lvalue ASSIGN procedure_call
    (25) print_statement -> . PRINT print_item
    (26) print_statement -> . print_statement AMPERSAND print_item
    (31) procedure_call -> . PROC_IDENT LPAREN RPAREN
    (32) procedure_call -> . PROC_IDENT LPAREN arguments RPAREN
    (71) lvalue -> . IDENT

    DEFINE          shift and go to state 7
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    CLEAR           shift and go to state 24
    PAUSE           shift and go to state 25
    WAIT            shift and go to state 26
    DRAW            shift and go to state 27
    IDENT           shift and go to state 18
    SHAPE           shift and go to state 10
    NUMBER          shift and go to state 11
    PRINT           shift and go to state 29
    PROC_IDENT      shift and go to state 17

    statement_list                 shift and go to state 12
    function_definition            shift and go to state 13
    procedure_definition           shift and go to state 14
    variable_definition            shift and go to state 15
    statement                      shift and go to state 16
    type                           shift and go to state 8
    assignment                     shift and go to state 19
    print_statement                shift and go to state 20
    procedure_call                 shift and go to state 23
    lvalue                         shift and go to state 28

state 3

    (6) multiple_definitions -> function_definition .

    DEFINE          reduce using rule 6 (multiple_definitions -> function_definition .)
    IF              reduce using rule 6 (multiple_definitions -> function_definition .)
    WHILE           reduce using rule 6 (multiple_definitions -> function_definition .)
    CLEAR           reduce using rule 6 (multiple_definitions -> function_definition .)
    PAUSE           reduce using rule 6 (multiple_definitions -> function_definition .)
    WAIT            reduce using rule 6 (multiple_definitions -> function_definition .)
    DRAW            reduce using rule 6 (multiple_definitions -> function_definition .)
    IDENT           reduce using rule 6 (multiple_definitions -> function_definition .)
    SHAPE           reduce using rule 6 (multiple_definitions -> function_definition .)
    NUMBER          reduce using rule 6 (multiple_definitions -> function_definition .)
    PRINT           reduce using rule 6 (multiple_definitions -> function_definition .)
    PROC_IDENT      reduce using rule 6 (multiple_definitions -> function_definition .)


state 4

    (8) multiple_definitions -> procedure_definition .

    DEFINE          reduce using rule 8 (multiple_definitions -> procedure_definition .)
    IF              reduce using rule 8 (multiple_definitions -> procedure_definition .)
    WHILE           reduce using rule 8 (multiple_definitions -> procedure_definition .)
    CLEAR           reduce using rule 8 (multiple_definitions -> procedure_definition .)
    PAUSE           reduce using rule 8 (multiple_definitions -> procedure_definition .)
    WAIT            reduce using rule 8 (multiple_definitions -> procedure_definition .)
    DRAW            reduce using rule 8 (multiple_definitions -> procedure_definition .)
    IDENT           reduce using rule 8 (multiple_definitions -> procedure_definition .)
    SHAPE           reduce using rule 8 (multiple_definitions -> procedure_definition .)
    NUMBER          reduce using rule 8 (multiple_definitions -> procedure_definition .)
    PRINT           reduce using rule 8 (multiple_definitions -> procedure_definition .)
    PROC_IDENT      reduce using rule 8 (multiple_definitions -> procedure_definition .)


state 5

    (10) multiple_definitions -> variable_definition .

    DEFINE          reduce using rule 10 (multiple_definitions -> variable_definition .)
    IF              reduce using rule 10 (multiple_definitions -> variable_definition .)
    WHILE           reduce using rule 10 (multiple_definitions -> variable_definition .)
    CLEAR           reduce using rule 10 (multiple_definitions -> variable_definition .)
    PAUSE           reduce using rule 10 (multiple_definitions -> variable_definition .)
    WAIT            reduce using rule 10 (multiple_definitions -> variable_definition .)
    DRAW            reduce using rule 10 (multiple_definitions -> variable_definition .)
    IDENT           reduce using rule 10 (multiple_definitions -> variable_definition .)
    SHAPE           reduce using rule 10 (multiple_definitions -> variable_definition .)
    NUMBER          reduce using rule 10 (multiple_definitions -> variable_definition .)
    PRINT           reduce using rule 10 (multiple_definitions -> variable_definition .)
    PROC_IDENT      reduce using rule 10 (multiple_definitions -> variable_definition .)


state 6

    (11) multiple_definitions -> empty .

    DEFINE          reduce using rule 11 (multiple_definitions -> empty .)
    IF              reduce using rule 11 (multiple_definitions -> empty .)
    WHILE           reduce using rule 11 (multiple_definitions -> empty .)
    CLEAR           reduce using rule 11 (multiple_definitions -> empty .)
    PAUSE           reduce using rule 11 (multiple_definitions -> empty .)
    WAIT            reduce using rule 11 (multiple_definitions -> empty .)
    DRAW            reduce using rule 11 (multiple_definitions -> empty .)
    IDENT           reduce using rule 11 (multiple_definitions -> empty .)
    SHAPE           reduce using rule 11 (multiple_definitions -> empty .)
    NUMBER          reduce using rule 11 (multiple_definitions -> empty .)
    PRINT           reduce using rule 11 (multiple_definitions -> empty .)
    PROC_IDENT      reduce using rule 11 (multiple_definitions -> empty .)


state 7

    (18) function_definition -> DEFINE . FUNC_IDENT LCURLY opt_formals RCURLY RETURN type variable_definitions IS rvalue END
    (19) procedure_definition -> DEFINE . PROC_IDENT LSQUARE opt_formals RSQUARE variable_definitions IS statement_list RETURN expression END
    (20) procedure_definition -> DEFINE . PROC_IDENT LSQUARE opt_formals RSQUARE variable_definitions IS statement_list END

    FUNC_IDENT      shift and go to state 30
    PROC_IDENT      shift and go to state 31


state 8

    (12) variable_definition -> type . IDENT EQ rvalue

    IDENT           shift and go to state 32


state 9

    (62) type -> IDENT .

    IDENT           reduce using rule 62 (type -> IDENT .)
    SEMICOLON       reduce using rule 62 (type -> IDENT .)
    RCURLY          reduce using rule 62 (type -> IDENT .)
    RSQUARE         reduce using rule 62 (type -> IDENT .)
    SHAPE           reduce using rule 62 (type -> IDENT .)
    NUMBER          reduce using rule 62 (type -> IDENT .)
    IS              reduce using rule 62 (type -> IDENT .)


state 10

    (63) type -> SHAPE .

    IDENT           reduce using rule 63 (type -> SHAPE .)
    SEMICOLON       reduce using rule 63 (type -> SHAPE .)
    RCURLY          reduce using rule 63 (type -> SHAPE .)
    RSQUARE         reduce using rule 63 (type -> SHAPE .)
    SHAPE           reduce using rule 63 (type -> SHAPE .)
    NUMBER          reduce using rule 63 (type -> SHAPE .)
    IS              reduce using rule 63 (type -> SHAPE .)


state 11

    (64) type -> NUMBER .

    IDENT           reduce using rule 64 (type -> NUMBER .)
    SEMICOLON       reduce using rule 64 (type -> NUMBER .)
    RCURLY          reduce using rule 64 (type -> NUMBER .)
    RSQUARE         reduce using rule 64 (type -> NUMBER .)
    SHAPE           reduce using rule 64 (type -> NUMBER .)
    NUMBER          reduce using rule 64 (type -> NUMBER .)
    IS              reduce using rule 64 (type -> NUMBER .)


state 12

    (2) program -> multiple_definitions statement_list .
    (3) statement_list -> statement_list . statement
    (21) statement -> . assignment
    (24) statement -> . print_statement
    (27) statement -> . IF expression THEN statement_list ENDIF
    (28) statement -> . IF expression THEN statement_list ELSE statement_list ENDIF
    (29) statement -> . WHILE expression IS statement_list ENDWHILE
    (30) statement -> . procedure_call
    (35) statement -> . CLEAR
    (36) statement -> . PAUSE
    (37) statement -> . WAIT expression
    (38) statement -> . DRAW expression
    (39) statement -> . DRAW expression rgb
    (22) assignment -> . lvalue ASSIGN rvalue
    (23) assignment -> . lvalue ASSIGN procedure_call
    (25) print_statement -> . PRINT print_item
    (26) print_statement -> . print_statement AMPERSAND print_item
    (31) procedure_call -> . PROC_IDENT LPAREN RPAREN
    (32) procedure_call -> . PROC_IDENT LPAREN arguments RPAREN
    (71) lvalue -> . IDENT

    $end            reduce using rule 2 (program -> multiple_definitions statement_list .)
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    CLEAR           shift and go to state 24
    PAUSE           shift and go to state 25
    WAIT            shift and go to state 26
    DRAW            shift and go to state 27
    PRINT           shift and go to state 29
    PROC_IDENT      shift and go to state 17
    IDENT           shift and go to state 34

    statement                      shift and go to state 33
    assignment                     shift and go to state 19
    print_statement                shift and go to state 20
    procedure_call                 shift and go to state 23
    lvalue                         shift and go to state 28

state 13

    (5) multiple_definitions -> multiple_definitions function_definition .
